baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedLiteralBool_render_prompt@InputNamedLiteralBool.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedLiteralBool.baml
---
fixture = 'InputNamedLiteralBool.baml'
function = 'FnInputNamedLiteralBool'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
