baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedLiteralInt_render_prompt@InputNamedLiteralInt.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedLiteralInt.baml
---
fixture = 'InputNamedLiteralInt.baml'
function = 'FnInputNamedLiteralInt'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
