baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedLiteralString_render_prompt@InputNamedLiteralString.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedLiteralString.baml
---
fixture = 'InputNamedLiteralString.baml'
function = 'FnInputNamedLiteralString'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
