baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedMapStringToClass_render_prompt@InputNamedMapStringToClass.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedMapStringToClass.baml
---
fixture = 'InputNamedMapStringToClass.baml'
function = 'FnInputNamedMapStringToClass'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
