baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedMapStringToMap_render_prompt@InputNamedMapStringToMap.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedMapStringToMap.baml
---
fixture = 'InputNamedMapStringToMap.baml'
error = '''Failed to prepare function 'FnInputNamedMapStringToMap': Validation error: Function 'FnInputNamedMapStringToMap' has no body'''
