baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedMapStringToString_render_prompt@InputNamedMapStringToString.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedMapStringToString.baml
---
fixture = 'InputNamedMapStringToString.baml'
function = 'FnInputNamedMapStringToString'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
