baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedPdf_render_prompt@InputNamedPdf.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedPdf.baml
---
fixture = 'InputNamedPdf.baml'
function = 'FnInputNamedPdf'

[prompt]
type = 'Chat'

[[prompt.messages]]
role = 'user'

[[prompt.messages.content]]
type = 'Text'
text = 'Describe the contents of this PDF document and what it is about in 15 words or less.'
