baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedStringList_render_prompt@InputNamedStringList.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedStringList.baml
---
fixture = 'InputNamedStringList.baml'
function = 'FnInputNamedStringList'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
