baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedStringOptional_render_prompt@InputNamedStringOptional.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedStringOptional.baml
---
fixture = 'InputNamedStringOptional.baml'
function = 'FnInputNamedStringOptional'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
