baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedString_render_prompt@InputNamedString.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedString.baml
---
fixture = 'InputNamedString.baml'
function = 'FnInputNamedString'

[prompt]
type = 'Completion'
text = 'Return this value back to me: '
